--- a/Medallies opdracht/Medallies opdracht.csproj
+++ b/Medallies opdracht/Medallies opdracht.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Opdracht21125.cs" />
     <Compile Include="Opdracht241125.cs" />
     <Compile Include="Opdracht3.cs" />
+    <Compile Include="Opdracht4.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
