--- a/Medallies opdracht/Medallies opdracht.csproj
+++ b/Medallies opdracht/Medallies opdracht.csproj
@@ -46,8 +46,10 @@
     <Compile Include="Opdracht2.cs" />
     <Compile Include="Opdracht21125.cs" />
     <Compile Include="Opdracht241125.cs" />
+    <Compile Include="Opdracht261125.cs" />
     <Compile Include="Opdracht3.cs" />
     <Compile Include="Opdracht4.cs" />
+    <Compile Include="Opdracht5.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
