--- a/Medallies opdracht/Medallies opdracht.csproj
+++ b/Medallies opdracht/Medallies opdracht.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Opdracht3.cs" />
     <Compile Include="Opdracht4.cs" />
     <Compile Include="Opdracht5.cs" />
+    <Compile Include="Opdracht6.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
