opdracht 9 in the making
it do be bronze, but we aimin for platinum!

--- a/Medallies opdracht/Medallies opdracht.csproj
+++ b/Medallies opdracht/Medallies opdracht.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Opdracht011225.cs" />
+    <Compile Include="Opdracht9.cs" />
     <Compile Include="User.cs" />
     <Compile Include="Opdracht2.cs" />
     <Compile Include="Opdracht21125.cs" />
