--- a/Medallies opdracht/Medallies opdracht.csproj
+++ b/Medallies opdracht/Medallies opdracht.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Car.cs" />
     <Compile Include="Opdracht011225.cs" />
+    <Compile Include="Opdracht10.cs" />
     <Compile Include="Opdracht11.cs" />
     <Compile Include="Opdracht9.cs" />
     <Compile Include="User.cs" />
