started on the gaming project!
"waterstone" a story based game

--- a/Medallies opdracht/Medallies opdracht.csproj
+++ b/Medallies opdracht/Medallies opdracht.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Opdracht10.cs" />
     <Compile Include="Opdracht11.cs" />
     <Compile Include="Opdracht9.cs" />
+    <Compile Include="WaterStone.cs" />
     <Compile Include="User.cs" />
     <Compile Include="Opdracht2.cs" />
     <Compile Include="Opdracht21125.cs" />
